styles.css
body,
html {
    font-size: 100%;
    min-height: 100vh;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

img {
    max-width: 100%;
}

.navbar {
    width: 100%;
    padding: 2rem 3%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.navbar a {
    text-decoration: none;
    color: black;
}

.navbar__links {
    list-style-type: none;
    display: flex;
    gap: clamp(1rem, 2vw, 3rem);
}

.navbar__links a {
    font-weight: 200;
}

.navbar__links>li:nth-child(6) {
    margin-left: clamp(2rem, 5vw, 6rem);
}

.navbar__links>li:nth-child(6)>a {
    font-weight: 600;
}

.navbar__links>li:nth-child(6)>a:hover {}

.navbar__links>li:nth-child(7)>a {
    font-weight: normal;
    padding: 1rem clamp(1.2rem, 2vw, 2rem);
    background-color: black;
    color: white;
    border-radius: 50px;
}

.navbar__links>li:nth-child(7)>a:hover {
    filter: brightness(1.3);
}

.navbar__links>li:nth-child(-n + 5)>a:hover {
    text-decoration: underline;
}

.nav_toggle {
    display: none;
}

main {
    width: 100%;
    padding: 0 5% 0 5%;
}

.header {
    text-align: center;
    position: relative;

    margin-inline: auto;
}

.header>img {
    width: 2.5rem;
    height: auto;
    position: absolute;
    display: none;
}

.header>h1 {
    font-size: clamp(1.8rem, 3.8vw, 3.5rem);
    margin-bottom: 1rem;
}

.header>p {
    font-size: clamp(1rem, 1.3vw, 1.2rem);
    margin-bottom: clamp(1rem, 8.8vw, 8rem);
    line-height: 1.3;

    width: 75%;
    margin-inline: auto;
}

.header>a {
    text-decoration: none;
    color: white;
    background-color: black;
    padding: 12px 15px;
    border-radius: 50px;
    width: max-content;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    margin: 0 auto 1rem auto;

    max-width: 63%;

    & img {
        width: 1.5rem;
        filter: invert(1);
    }
}

.image-wrapper {
    position: relative;
    width: 100%;
    /* max-width: 90rem; */
    filter: url('#goo');
    overflow: hidden;
    height: 700px;

    padding-bottom: 2rem;
}

.image-wrapper>img {
    width: 100%;
    height: 100%;
    object-fit: cover;



    clip-path: polygon(0 0, 0 88%, 25% 88%, 25% 100%, 75% 100%, 75% 88%, 100% 88%, 100% 0, 86% 0, 86% 9%, 79% 10%, 80% 22%, 72% 22%, 72% 39%, 31% 39%, 30% 28%, 23% 28%, 23% 15%, 16% 16%, 16% 0);
}



@media (max-width: 48em) {

    .header {
        margin-bottom: -11.8rem;
    }

    .image-wrapper {
        height: 500px;
    }

    .image-wrapper>img {
        clip-path: polygon(0 0, 0% 100%, 11% 100%, 9% 93%, 91% 93%, 89% 100%, 100% 100%, 100% 0, 92% 0, 92% 20%, 84% 20%, 84% 40%, 16% 40%, 16% 20%, 8% 20%, 8% 0);
    }

    .navbar {
        padding-inline: 5%;
    }

    .navbar__links {
        flex-direction: column;
        align-items: flex-start;
        width: 80%;
        height: 100vh;
        overflow-y: scroll;
        padding: 4rem 5% 1rem 5%;
        z-index: 4;
        position: fixed;
        top: 0;
        left: 150vw;
        overflow-y: scroll;
        scrollbar-width: none;
        box-shadow: 20vw 0 0 #00000078;
        background-color: rgba(199, 187, 187, 0.123);
        backdrop-filter: blur(15px);
        padding-bottom: 2rem;
        gap: 0;
    }

    .navbar__links::-webkit-scrollbar {
        display: none;
    }

    .navbar__links>li {
        width: 100%;
    }

    .navbar__links>li>a {
        width: 100%;
        padding-block: 0.5rem;
        display: block;
    }

    .navbar__links>li:not(.navbar__links>li:nth-child(7))>a:hover {
        backdrop-filter: blur(35px);
        text-decoration: none;
    }

    .navbar__links>li:nth-child(6) {
        margin: auto 0 1rem 0;
        margin-left: 0;
        text-align: center;
    }

    .navbar__links>li:nth-child(7) {
        margin-bottom: auto;
        text-align: center;
    }

    .nav_toggle {
        display: block;
        position: absolute;
        right: 5%;
        top: 1rem;
        width: 2.5rem;
        height: 2.5rem;
        /* filter: invert(1); */
    }

    input.nav_toggle {
        z-index: 10;
        opacity: 0;
    }

    span.nav_toggle {
        z-index: 5;
        padding: 0.6rem;
        background-color: black;
        border-radius: 12px;
    }

    span.nav_toggle>span {
        display: block;
        height: 20.8px;
        width: 20.8px;
        background: url(./images/iconMenu.svg);
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;
        transition: background 150ms ease-in-out;
        filter: invert(1);
        /* filter: brightness(10); */
    }

    input.nav_toggle:focus~span,
    input.nav_toggle:hover~span {
        /* filter: brightness(20); */
    }

    input.nav_toggle:checked,
    input.nav_toggle:checked~span {
        position: fixed;
    }

    input.nav_toggle:checked~span>span {
        background: url(./images/iconCloseMenu.svg);
        background-size: contain;
        background-repeat: no-repeat;
        /* position: fixed; */

    }

    input.nav_toggle:checked~.navbar__links {
        animation: nav-slide 550ms ease-out;
        animation-fill-mode: forwards;
    }

    @keyframes nav-slide {
        0% {
            /* display: flex; */
            left: 100vw;
        }

        10% {
            /* left: 100vw; */
        }

        60% {
            left: 0vw;
        }

        80% {
            left: 10vw;
        }

        100% {
            left: 0vw;
        }
    }

}

